# auditree-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  .yapf-config  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  coding-standards.html  compliance.html  compliance.scripts.html  compliance.utils.html  compliance.utils.services.html  design-principles.html  evidence-partitioning.html  fixers.html  genindex.html  index.html  modules.html  notifiers.html  objects.inv  oscal.html  py-modindex.html  quick-start.html  report-builder.html  running-on-tekton.html  running-on-travis.html  search.html  searchindex.js  setup.cfg  setup.py  verifying-signed-evidence.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-collaborator.md  proposed-change.md
.github/workflows/: documentation.yml  python-publish-2.yml  python-publish.yml  python-test.yml
_modules/: index.html
_modules/compliance/: agent.html  check.html  config.html  controls.html  evidence.html  fetch.html  fix.html  locker.html  notify.html  report.html  runners.html
_modules/compliance/scripts/: compliance_cli.html
_modules/compliance/utils/: credentials.html  data_parse.html  exceptions.html  http.html  path.html  test.html
_sources/: coding-standards.rst.txt  compliance.rst.txt  compliance.scripts.rst.txt  compliance.utils.rst.txt  compliance.utils.services.rst.txt  design-principles.rst.txt  evidence-partitioning.rst.txt  index.rst.txt  notifiers.rst.txt  quick-start.rst.txt  running-on-travis.rst.txt
_static/: documentation_options.js
compliance/: __init__.py  __init__.py.orig  agent.py  check.py  config.py  controls.py  evidence.py  fetch.py  fix.py  locker.py  notify.py  report.py  runners.py
compliance/scripts/: __init__.py  compliance_cli.py
compliance/templates/: readme_toc.md.tmpl
compliance/utils/: __init__.py  credentials.py  data_parse.py  exceptions.py  fetch_local_commands  http.py  path.py  test.py
compliance/utils/services/: __init__.py  github.py  pagerduty.py
demo/: README.md  auditree_demo.json  controls.json  requirements.txt
demo/demo_examples/: __init__.py  requirements.txt
demo/demo_examples/checks/: __init__.py  test_common.py  test_github.py  test_github_api_versions.py  test_image_content.py  test_world_clock.py
demo/demo_examples/evidence/: __init__.py  utils.py
demo/demo_examples/evidences/: __init__.py
demo/demo_examples/fetchers/: __init__.py  fetch_auditree_logo.py  fetch_common.py  fetch_github.py  fetch_github_api_versions.py  fetch_world_clock.py
demo/demo_examples/templates/: default.md.tmpl
doc/: .buildinfo  coding-standards.html  compliance.html  compliance.scripts.html  compliance.utils.html  design-principles.html  evidence-partitioning.html  fixers.html  genindex.html  index.html  modules.html  notifiers.html  objects.inv  oscal.html  py-modindex.html  quick-start.html  report-builder.html  running-on-tekton.html  running-on-travis.html  search.html  searchindex.js
doc-source/: coding-standards.rst  conf.py  credentials-example.cfg  design-principles.rst  evidence-partitioning.rst  index.rst  notifiers.rst  oscal.rst  quick-start.rst  report-builder.rst  running-on-tekton.rst  running-on-travis.rst  verifying-signed-evidence.rst
doc/_modules/: index.html
doc/_modules/compliance/: check.html  config.html  controls.html  evidence.html  fetch.html  fix.html  locker.html  notify.html  report.html  runners.html
doc/_sources/: coding-standards.rst.txt  compliance.rst.txt  compliance.scripts.rst.txt  compliance.utils.rst.txt  evidence-partitioning.rst.txt  fixers.rst.txt  index.rst.txt  modules.rst.txt  notifiers.rst.txt
doc/_static/: documentation_options.js
doc/demo-checks/: README.html
test/: __init__.py
test/t_compliance/: __init__.py
(+46 files in other folders)
