[metadata]
name = compliance-tool
version = attr: compliance.__version__
description = Tool to run compliance control checks as unit tests
author = IBM Cloudant Infrastructure Team & others
author_email = cldinfra@us.ibm.com
url = https://github.com/ComplianceAsCode/auditree-framework
license = IBM internal use only
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = https://github.com/ComplianceAsCode/auditree-framework

[options]
packages = find:
install_requires =
    utilitarian>=0.25.0
    inflection>=0.3.1
    GitPython>=2.1.3
    jinja2>=2.10
    ibm-cloud-security-advisor-findingsapi-sdk>=2.0.5
    deprecated>=1.2.9
    ilcli>=0.2.3

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    compliance = compliance.scripts.compliance_cli:run

[options.extras_require]
dev =
    nose>=1.3.7
    bandit>=1.5.0
    coverage>=4.5.1
    pre-commit>=2.4.0
    Sphinx>=1.7.2
    setuptools
    wheel
    twine
