[metadata]
name = auditree-framework
version = attr: compliance.__version__
description = Tool to run compliance control checks as unit tests
author = Auditree Security and Compliance
author_email = al.finkelstein@ibm.com
url = https://auditree.github.io/
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
long_description_content_type = text/markdown
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
    inflection>=0.3.1
    GitPython>=2.1.3
    jinja2>=2.10
    ibm-cloud-security-advisor-findingsapi-sdk>=2.0.5
    deprecated>=1.2.9
    ilcli>=0.3.1

[options.packages.find]
exclude =
    test.*
    test

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    compliance = compliance.scripts.compliance_cli:run

[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    bandit>=1.5.0
    pre-commit>=2.4.0
    Sphinx>=1.7.2
    setuptools
    wheel
    twine
